! Upload coding part! Gosh

--- a/HW_05.ipynb
+++ b/HW_05.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Project report: 10 points\n",
     "\n",
-    "### Name: [TODO]\n",
+    "### Name: [Yawen Tan]\n",
     "\n",
     "### Link to the github repo: [TODO]"
    ]
@@ -243,9 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[42m[ OK ]\u001b[0m Python version is 3.12.11\n",
+      "\n",
+      "\u001b[42m[ OK ]\u001b[0m matplotlib version 3.10.5 is installed.\n",
+      "\u001b[42m[ OK ]\u001b[0m numpy version 2.3.2 is installed.\n",
+      "\u001b[42m[ OK ]\u001b[0m sklearn version 1.7.1 is installed.\n",
+      "\u001b[42m[ OK ]\u001b[0m pandas version 2.3.2 is installed.\n",
+      "\u001b[42m[ OK ]\u001b[0m pytest version 8.4.1 is installed.\n",
+      "\u001b[42m[ OK ]\u001b[0m torch version 2.7.1 is installed.\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import print_function\n",
     "from packaging.version import parse as Version\n",
@@ -309,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +404,7 @@
     "        Calculate the node score using the train error of the subdataset and return it.\n",
     "        For a dataset with two classes, C(p) = min{p, 1-p}\n",
     "    '''\n",
-    "    pass\n",
+    "    return min(prob, 1 - prob)\n",
     "\n",
     "def node_score_entropy(prob):\n",
     "    '''\n",
@@ -400,7 +415,9 @@
     "        HINT: remember to consider the range of values that p can take!\n",
     "    '''\n",
     "    # HINT: If p < 0 or p > 1 then entropy = 0\n",
-    "    pass\n",
+    "    if prob <= 0 or prob >= 1:\n",
+    "        return 0\n",
+    "    return -prob * math.log(prob) - (1 - prob) * math.log(1 - prob)\n",
     "\n",
     "\n",
     "def node_score_gini(prob):\n",
@@ -409,7 +426,7 @@
     "        Calculate the node score using the gini index of the subdataset and return it.\n",
     "        For dataset with 2 classes, C(p) = 2 * p * (1-p)\n",
     "    '''\n",
-    "    pass\n",
+    "    return 2 * prob * (1 - prob)\n",
     "\n",
     "class Node:\n",
     "    '''\n",
@@ -441,6 +458,17 @@
     "\n",
     "        # TODO: find majority class; set to class 0 if exactly balanced. This is the default label of your root node.\n",
     "        # Make sure to assign it to an instance variable `majority_class`.\n",
+    "        \n",
+    "        # Find prediction y first\n",
+    "        y = [row[0] for row in data]\n",
+    "        # Find number of class 1 and class 0\n",
+    "        num_class_1 = y.count(1)\n",
+    "        num_class_0 = y.count(0)\n",
+    "\n",
+    "        if num_class_1 > num_class_0:\n",
+    "            self.majority_class = 1\n",
+    "        else:\n",
+    "            self.majority_class = 0\n",
     "\n",
     "        self.max_depth = max_depth\n",
     "        self.root = Node(label = self.majority_class)\n",
@@ -515,15 +543,36 @@
     "        '''\n",
     "        # Checks if node is not a Leaf\n",
     "        if not node.isleaf:\n",
+    "            # determine whether to prune left and right subtrees first\n",
     "            if node.left is not None:\n",
     "                # TODO: Prune node.left\n",
-    "                pass\n",
+    "                self._prune_recurs(node.left, validation_data)\n",
     "            if node.right is not None:\n",
     "                # TODO: Prune node.right\n",
-    "                pass\n",
+    "                self._prune_recurs(node.right, validation_data)\n",
+    "            # if both children are leaves, consider pruning this node\n",
     "            if (node.left.isleaf) and (node.right.isleaf):\n",
     "                # TODO: Prune node only if loss is reduced\n",
-    "                pass\n",
+    "                # Compute loss before pruning\n",
+    "                loss_before = self.loss(validation_data)\n",
+    "                # Save old values\n",
+    "                old_isleaf = node.isleaf\n",
+    "                old_left = node.left\n",
+    "                old_right = node.right\n",
+    "                old_index = node.index_split_on\n",
+    "                # Prune and change node to leaf\n",
+    "                node.isleaf = True\n",
+    "                node.left = None\n",
+    "                node.right = None\n",
+    "                node.index_split_on = 0\n",
+    "                # Compute loss after pruning\n",
+    "                loss_after = self.loss(validation_data)\n",
+    "                # If loss increases, revert the changes\n",
+    "                if loss_after > loss_before:\n",
+    "                    node.isleaf = old_isleaf\n",
+    "                    node.left = old_left\n",
+    "                    node.right = old_right\n",
+    "                    node.index_split_on = old_index\n",
     "                    \n",
     "        \n",
     "    def _is_terminal(self, node, data, indices):\n",
@@ -548,11 +597,45 @@
     "        y = [row[0] for row in data]        \n",
     "        \n",
     "        # TODO: Check Cases if the node should stop splitting\n",
-    "        \n",
+    "        # 1. The dataset (as passed to parameter data) is empty.\n",
+    "        if len(y) == 0:\n",
+    "            return True, self.majority_class\n",
+    "        # 2. There are no more indices to split on.\n",
+    "        if len(indices) == 0:\n",
+    "            num_class_1 = y.count(1)\n",
+    "            num_class_0 = y.count(0)\n",
+    "            if num_class_1 > num_class_0:\n",
+    "                return True, 1\n",
+    "            elif num_class_0 > num_class_1:\n",
+    "                return True, 0\n",
+    "            else:\n",
+    "                return True, self.majority_class\n",
+    "        # 3. All the instances in this dataset belong to the same class\n",
+    "        if all(label == 1 for label in y):\n",
+    "            return True, 1\n",
+    "        if all(label == 0 for label in y):\n",
+    "            return True, 0\n",
+    "        # 4. The depth of the node reaches the maximum depth.\n",
+    "        if node.depth >= self.max_depth:\n",
+    "            num_class_1 = y.count(1)\n",
+    "            num_class_0 = y.count(0)\n",
+    "            if num_class_1 > num_class_0:\n",
+    "                return True, 1\n",
+    "            elif num_class_0 > num_class_1:\n",
+    "                return True, 0\n",
+    "            else:\n",
+    "                return True, self.majority_class\n",
+    "  \n",
     "\n",
     "        # TODO: Check cases if the node should be set to the majority label of the training dataset\n",
-    "\n",
-    "        pass\n",
+    "        num_class_1 = sum(y)\n",
+    "        num_class_0 = len(y) - num_class_1\n",
+    "        if num_class_1 > num_class_0:\n",
+    "            return False, 1\n",
+    "        elif num_class_0 > num_class_1:\n",
+    "            return False, 0\n",
+    "        else:\n",
+    "            return False, self.majority_class\n",
     "        \n",
     "\n",
     "    def _split_recurs(self, node, data, indices):\n",
@@ -569,15 +652,54 @@
     "        The data should be recursively passed to the children.\n",
     "        '''\n",
     "        # TODO: Check if node needs to be split\n",
-    "\n",
+    "        should_stop, label = self._is_terminal(node, data, indices)\n",
+    "        node.label = label # Set node label\n",
+    "        # if should stop, set node as leaf and return\n",
+    "        if should_stop:\n",
+    "            node.isleaf = True\n",
+    "            node.index_split_on = 0  # When isleaf, index_split_on = 0\n",
+    "            node._set_info(gain=0.0, num_samples=len(data))\n",
+    "            return\n",
+    "        \n",
     "        if not node.isleaf:\n",
     "            # TODO: Initialize and Calculate Gain\n",
+    "            best_gain = float('-inf')\n",
+    "            best_index = None  \n",
+    "            for idx in indices:\n",
+    "                gain = self._calc_gain(data, idx, self.gain_function)\n",
+    "                if gain > best_gain:\n",
+    "                    best_gain = gain\n",
+    "                    best_index = idx\n",
+    "            if best_index is None:\n",
+    "                node.isleaf = True\n",
+    "                node.index_split_on = 0\n",
+    "                node._set_info(gain=0.0, num_samples=len(data))\n",
+    "                return\n",
     "\n",
     "            # TODO: Split the column and use _set_info() \n",
+    "            # set node info\n",
+    "            node.isleaf = False\n",
+    "            node.index_split_on = best_index\n",
+    "            node._set_info(gain=best_gain, num_samples=len(data))\n",
     "\n",
     "            # TODO: Split the Data and Pass it recursively to the  children\n",
-    "            \n",
-    "        pass\n",
+    "            # Split data: Left: feature is False; Right: feature is True\n",
+    "            left_data = [row for row in data if not row[best_index]]\n",
+    "            right_data = [row for row in data if row[best_index]]\n",
+    "            # Find the indices for child nodes\n",
+    "            child_indices = [i for i in indices if i != best_index]\n",
+    "            # Create left and right child nodes\n",
+    "            node.left = Node()\n",
+    "            node.right = Node()\n",
+    "            # Intialize child and set depth and label\n",
+    "            node.left.depth = node.depth + 1\n",
+    "            node.left.label = label\n",
+    "            node.right.depth = node.depth + 1\n",
+    "            node.right.label = label\n",
+    "            # Recursively split left and right children\n",
+    "            self._split_recurs(node.left, left_data, child_indices)\n",
+    "            self._split_recurs(node.right, right_data, child_indices)\n",
+    "\n",
     "\n",
     "    def _calc_gain(self, data, split_index, gain_function):\n",
     "        '''\n",
@@ -592,6 +714,27 @@
     "\n",
     "        if len(y) != 0 and len(xi) != 0:\n",
     "            # TODO: Calculate Gain\n",
+    "            # Calculate P[y=1]\n",
+    "            p_y1 = sum(y) / len(y)\n",
+    "            # Separate y\n",
+    "            true_y = [y[i] for i in range(len(y)) if xi[i] == True]\n",
+    "            false_y = [y[i] for i in range(len(y)) if xi[i] == False]\n",
+    "            # Calculate P[x_i=True] and P[x_i=False]\n",
+    "            p_true = len(true_y) / len(y)\n",
+    "            p_false = len(false_y) / len(y)\n",
+    "            # Calculate P[y=1 | x_i=True] and P[y=1 | x_i=False]\n",
+    "            if len(true_y) > 0:\n",
+    "                p_y1_true = sum(true_y) / len(true_y)\n",
+    "            else:\n",
+    "                p_y1_true = 0  # if empty, set to 0\n",
+    "            if len(false_y) > 0:\n",
+    "                p_y1_false = sum(false_y) / len(false_y)\n",
+    "            else:\n",
+    "                p_y1_false = 0\n",
+    "\n",
+    "            # -Calculate Gain\n",
+    "            gain = gain_function(p_y1) - p_true * gain_function(p_y1_true) - p_false * gain_function(p_y1_false)\n",
+    "\n",
     "        else:\n",
     "            gain = 0\n",
     "        return gain\n",
@@ -678,9 +821,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---START PRINT TREE---\n",
+      "split attribute = 3; gain = 0.318257; number of samples = 6\n",
+      "0 -> 0\n",
+      "1 -> split attribute = 1; gain = 0.174416; number of samples = 3\n",
+      "\t\t0 -> 1\n",
+      "\t\t1 -> split attribute = 2; gain = 0.693147; number of samples = 2\n",
+      "\t\t\t\t0 -> 1\n",
+      "\t\t\t\t1 -> 0\n",
+      "----END PRINT TREE---\n",
+      "training loss not pruned: 0.0\n",
+      "validation loss not pruned: 0.5 \n",
+      "\n",
+      "---START PRINT TREE---\n",
+      "split attribute = 3; gain = 0.318257; number of samples = 6\n",
+      "0 -> 0\n",
+      "1 -> 1\n",
+      "----END PRINT TREE---\n",
+      "training loss pruned: 0.16666666666666666\n",
+      "validation loss pruned: 0.0\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Yawen Tan\n",
+      "2025-10-29\n"
+     ]
+    }
+   ],
    "source": [
     "import pytest\n",
     "np.random.seed(0)\n",
@@ -785,7 +958,7 @@
     "#[TODO] Print your name with the date, using today function from date \n",
     "print()\n",
     "print('----'*25)\n",
-    "print('student name')\n",
+    "print('Yawen Tan')\n",
     "print(date.today())"
    ]
   },
@@ -828,9 +1001,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---START PRINT TREE---\n",
+      "split attribute = 7; gain = 0.074266; number of samples = 50\n",
+      "0 -> 1\n",
+      "1 -> split attribute = 2; gain = 0.028476; number of samples = 46\n",
+      "\t\t0 -> split attribute = 3; gain = 0.323642; number of samples = 8\n",
+      "\t\t\t\t0 -> split attribute = 5; gain = 0.219512; number of samples = 6\n",
+      "\t\t\t\t\t\t0 -> 1\n",
+      "\t\t\t\t\t\t1 -> 0\n",
+      "\t\t\t\t1 -> 0\n",
+      "\t\t1 -> split attribute = 8; gain = 0.020641; number of samples = 38\n",
+      "\t\t\t\t0 -> 0\n",
+      "\t\t\t\t1 -> split attribute = 5; gain = 0.003781; number of samples = 36\n",
+      "\t\t\t\t\t\t0 -> 0\n",
+      "\t\t\t\t\t\t1 -> 0\n",
+      "----END PRINT TREE---\n",
+      "training loss not pruned: 0.26\n",
+      "validation loss not pruned: 0.22 \n",
+      "\n",
+      "---START PRINT TREE---\n",
+      "split attribute = 7; gain = 0.074266; number of samples = 50\n",
+      "0 -> 1\n",
+      "1 -> split attribute = 2; gain = 0.028476; number of samples = 46\n",
+      "\t\t0 -> split attribute = 3; gain = 0.323642; number of samples = 8\n",
+      "\t\t\t\t0 -> 1\n",
+      "\t\t\t\t1 -> 0\n",
+      "\t\t1 -> 0\n",
+      "----END PRINT TREE---\n",
+      "training loss pruned: 0.26\n",
+      "validation loss pruned: 0.16\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "toy_train = pd.read_csv(\"./data/toy_train.csv\", header=None).to_numpy()\n",
@@ -895,9 +1104,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[data/chess.csv] | Gain: error | Train (no prune): 0.0000\n",
+      "[data/chess.csv] | Gain: error | Test  (no prune): 0.0518\n",
+      "[data/chess.csv] | Gain: error | Train (pruned):   0.0170\n",
+      "[data/chess.csv] | Gain: error | Test  (pruned):   0.0360\n",
+      "[data/chess.csv] | Gain: entropy | Train (no prune): 0.0000\n",
+      "[data/chess.csv] | Gain: entropy | Test  (no prune): 0.0142\n",
+      "[data/chess.csv] | Gain: entropy | Train (pruned):   0.0040\n",
+      "[data/chess.csv] | Gain: entropy | Test  (pruned):   0.0134\n",
+      "[data/chess.csv] | Gain: gini | Train (no prune): 0.0000\n",
+      "[data/chess.csv] | Gain: gini | Test  (no prune): 0.0142\n",
+      "[data/chess.csv] | Gain: gini | Train (pruned):   0.0040\n",
+      "[data/chess.csv] | Gain: gini | Test  (pruned):   0.0134\n",
+      "[data/spam.csv] | Gain: error | Train (no prune): 0.0140\n",
+      "[data/spam.csv] | Gain: error | Test  (no prune): 0.1519\n",
+      "[data/spam.csv] | Gain: error | Train (pruned):   0.0610\n",
+      "[data/spam.csv] | Gain: error | Test  (pruned):   0.1142\n",
+      "[data/spam.csv] | Gain: entropy | Train (no prune): 0.0140\n",
+      "[data/spam.csv] | Gain: entropy | Test  (no prune): 0.1184\n",
+      "[data/spam.csv] | Gain: entropy | Train (pruned):   0.0410\n",
+      "[data/spam.csv] | Gain: entropy | Test  (pruned):   0.1119\n",
+      "[data/spam.csv] | Gain: gini | Train (no prune): 0.0140\n",
+      "[data/spam.csv] | Gain: gini | Test  (no prune): 0.1250\n",
+      "[data/spam.csv] | Gain: gini | Train (pruned):   0.0430\n",
+      "[data/spam.csv] | Gain: gini | Test  (pruned):   0.1180\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -936,10 +1176,44 @@
     "    #      (b) Print average test loss (not-pruned)\n",
     "    #      (c) Print average training loss (pruned)\n",
     "    #      (d) Print average test loss (pruned)\n",
+    "    gain_functions = [(\"error\", node_score_error),\n",
+    "                      (\"entropy\", node_score_entropy),\n",
+    "                      (\"gini\", node_score_gini)]\n",
+    "    # Loop through each gain function\n",
+    "    for item in gain_functions:\n",
+    "        name = item[0]  # name of gain function\n",
+    "        gain_fn = item[1]  # gain function\n",
+    "\n",
+    "        # Not pruned decision tree\n",
+    "        tree = DecisionTree(train_data, gain_function=gain_fn, max_depth=40)\n",
+    "        # Calculate unpruned training loss\n",
+    "        train_loss_nonpruned = tree.loss(train_data)\n",
+    "        # Compute unpruned testing loss\n",
+    "        test_loss_nonpruned = tree.loss(test_data)\n",
+    "\n",
+    "        # Pruned decision tree\n",
+    "        pruned_tree = DecisionTree(train_data, validation_data=validation_data,\n",
+    "                                   gain_function=gain_fn, max_depth=40)\n",
+    "        # Calculate pruned training loss\n",
+    "        train_loss_pruned = pruned_tree.loss(train_data)\n",
+    "        # Compute pruned testing loss\n",
+    "        test_loss_pruned = pruned_tree.loss(test_data)\n",
+    "\n",
+    "        # Print the results\n",
+    "        print(f\"[{filename}] | Gain: {name} | Train (no prune): {train_loss_nonpruned:.4f}\")\n",
+    "        print(f\"[{filename}] | Gain: {name} | Test  (no prune): {test_loss_nonpruned:.4f}\")\n",
+    "        print(f\"[{filename}] | Gain: {name} | Train (pruned):   {train_loss_pruned:.4f}\")\n",
+    "        print(f\"[{filename}] | Gain: {name} | Test  (pruned):   {test_loss_pruned:.4f}\")\n",
     "\n",
     "    # TODO: Feel free to print or plot anything you like here. Just comment\n",
     "    # make sure to comment it out, or put it in a function that isn't called\n",
     "    # by default when you hand in your code!\n",
+    "\n",
+    "    # import matplotlib.pyplot as plt\n",
+    "    # fig, ax = plt.subplots(1, 1)\n",
+    "    # title = \"Loss vs Nodes: \" + filename\n",
+    "    # loss_plot(ax, title, tree, pruned_tree, train_data, test_data)\n",
+    "    # plt.show()\n",
     "\n",
     "\n",
     "########### PLEASE DO NOT CHANGE THESE LINES OF CODE! ###################\n",
@@ -997,7 +1271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "data2060env",
    "language": "python",
    "name": "python3"
   },
@@ -1012,11 +1286,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.11"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "bcd9bc17ffadb8b3c09124f861805f4f094648af93180b87f0218364b7d0c0de"
-   }
   }
  },
  "nbformat": 4,
