--- a/HW_05.ipynb
+++ b/HW_05.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "### Name: [Yawen Tan]\n",
     "\n",
-    "### Link to the github repo: [TODO]"
+    "### Link to the github repo: [https://github.com/IsabellaTan/Brown-DATA2060-HW5#]"
    ]
   },
   {
