--- a/HW_05.ipynb
+++ b/HW_05.ipynb
@@ -58,7 +58,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Solution:**"
+    "**Solution:**\n",
+    "\n",
+    "<img src=\"step1.png\" width=\"500\">\n",
+    "\n",
+    "<img src=\"step2.png\" width=\"500\">\n",
+    "\n",
+    "<img src=\"step3.png\" width=\"500\">\n",
+    "\n",
+    "<img src=\"final.png\" width=\"500\">\n",
+    "\n",
+    "\n",
+    "\n",
+    "In Step 1, the first decision stump (green horizontal line, y = c1) separates the data roughly by the y-coordinate: samples above the line are predicted as “−” and those below as “+”. But several points near the boundary are misclassified.\n",
+    "\n",
+    "In Step 2, AdaBoost increases the weights(enlarge) of those misclassified samples so that the next weak classifier focuses more on them. A second decision stump (purple vertical line, x = c2) is added. This stump divides the plane vertically: samples to the left of the line are predicted “−”, and those to the right are predicted “+”. And it still remains incorrectly classified.\n",
+    "\n",
+    "In Step 3, the algorithm again emphasizes(enlarge) the remaining misclassified points. A third decision stump (light-blue vertical line, x = c3) is introduced on the right side to correct these errors. Now the combination of three stumps—two vertical and one horizontal—successfully separates all the red “−” and blue “+” samples.\n",
+    "\n",
+    "Finally, the Final Check panel confirms that with these three decision stumps, all points are correctly classified (as shown by the yellow check marks).\n"
    ]
   },
   {
